--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -457,6 +457,11 @@
               android:exported="true"
               android:configChanges="touchscreen|keyboard|keyboardHidden|orientation|screenLayout|screenSize"/>
 
+    <activity
+            android:name=".maps.PlacePickerActivity"
+            android:label="@string/PlacePickerActivity_title"
+            android:theme="@style/TextSecure.LightNoActionBar" />
+
     <service android:enabled="true" android:name="org.thoughtcrime.securesms.service.WebRtcCallService"/>
     <service android:enabled="true" android:name=".service.ApplicationMigrationService"/>
     <service android:enabled="true" android:exported="false" android:name=".service.KeyCachingService"/>
