Disable default CameraX initializer.
CameraX was initializing Camera2 API stuff on API < 21, causing
crashes at boot. To handle this, we disable the default
ContentProvider initializer and initialize things ourselves for
appropriate API levels.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -616,6 +616,11 @@
               android:authorities="org.thoughtcrime.securesms.database.stickerpack"
               android:exported="false" />
 
+    <provider android:name="androidx.camera.camera2.impl.Camera2Initializer"
+              android:authorities="${applicationId}.camerax-init"
+              android:exported="false"
+              android:enabled="false" />
+
     <receiver android:name=".service.BootReceiver">
         <intent-filter>
             <action android:name="android.intent.action.BOOT_COMPLETED"/>
