Fix audio playback on API 28 devices.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -96,7 +96,8 @@
                  tools:replace="android:allowBackup"
                  android:allowBackup="false"
                  android:theme="@style/TextSecure.LightTheme"
-                 android:largeHeap="true">
+                 android:largeHeap="true"
+                 android:networkSecurityConfig="@xml/local_audio_server_config">
 
     <meta-data
             android:name="com.google.android.geo.API_KEY"
