--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -429,6 +429,10 @@
               android:theme="@style/TextSecure.DarkTheme"
               android:configChanges="touchscreen|keyboard|keyboardHidden|orientation|screenLayout|screenSize"/>
 
+    <activity android:name=".scribbles.NewStickerSelectActivity"
+              android:theme="@style/TextSecure.DarkTheme"
+              android:configChanges="touchscreen|keyboard|keyboardHidden|orientation|screenLayout|screenSize"/>
+
     <activity android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
               android:theme="@style/TextSecure.DarkTheme"/>
 
