--- a/build.gradle
+++ b/build.gradle
@@ -296,11 +296,11 @@ def canonicalVersionCode = 535
 def canonicalVersionName = "4.48.6"
 
 def postFixSize = 10
-def abiPostFix = ['armeabi-v7a' : 1,
+def abiPostFix = ['universal'   : 0,
+                  'armeabi-v7a' : 1,
                   'arm64-v8a'   : 2,
                   'x86'         : 3,
-                  'x86_64'      : 4,
-                  'universal'   : 5]
+                  'x86_64'      : 4]
 
 android {
     flavorDimensions "none"
