Added a simple staging build config.

--- a/build.gradle
+++ b/build.gradle
@@ -393,6 +393,15 @@ android {
             testProguardFiles 'proguard-automation.pro',
                           'proguard.cfg'
         }
+        staging {
+            initWith debug
+
+            buildConfigField "String", "SIGNAL_URL", "\"https://textsecure-service-staging.whispersystems.org\""
+            buildConfigField "String", "SIGNAL_CDN_URL", "\"https://cdn-staging.signal.org\""
+            buildConfigField "String", "SIGNAL_CONTACT_DISCOVERY_URL", "\"https://api-staging.directory.signal.org\""
+            buildConfigField "String", "MRENCLAVE", "\"ba4ebb438bc07713819ee6c98d94037747006d7df63fc9e44d2d6f1fec962a79\""
+            buildConfigField "String", "UNIDENTIFIED_SENDER_TRUST_ROOT", "\"BbqY1DzohE4NUZoVF+L18oUPrK3kILllLEJh2UnPSsEx\""
+        }
         release {
             minifyEnabled true
             proguardFiles = buildTypes.debug.proguardFiles
